labs/lab7/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      serviceAccountName: juice-shop
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: juice-shop
          image: bkimminich/juice-shop@sha256:fd58bdc9745416afce8184ee0666278a436574633ea7880365153a63bfd418b0
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: data-vol
              mountPath: /juice-shop/data
            - name: i18n-vol
              mountPath: /juice-shop/i18n
            - name: logs-vol
              mountPath: /juice-shop/logs
            - name: ftp-vol
              mountPath: /juice-shop/ftp
            - name: well-known-vol
              mountPath: /juice-shop/.well-known
            - name: frontend-vol
              mountPath: /juice-shop/frontend/dist/frontend
      volumes:
        - name: data-vol
          emptyDir: {}
        - name: i18n-vol
          emptyDir: {}
        - name: logs-vol
          emptyDir: {}
        - name: ftp-vol
          emptyDir: {}
        - name: well-known-vol
          emptyDir: {}
        - name: frontend-vol
          emptyDir: {}
